<resources>
    <string name="app_name">RoomDatabase</string>

    <string name="user_id">UserId</string>
    <string name="name">Username</string>
    <string name="email_id">Email-Id</string>
    <string name="contact_no">PhoneNumber</string>

    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="read">Get</string>

    <string name="data_saved_successfully">Data saved Successfully</string>
    <string name="data_updated_successfully">Data updated Successfully</string>
    <string name="data_deleted">Data deleted</string>

    <string name="enter_user_name">please enter username</string>
    <string name="enter_email_id">please enter email-id</string>
    <string name="enter_contact_no">please enter phone number</string>
    <string name="enter_user_id">please enter userId</string>
</resources>
